--- a/index.html
+++ b/index.html
@@ -2,64 +2,131 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./dist/images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./dist/css/main.min.css">
+	<link rel="icon" type="image/png" sizes="32x32" href="./dist/images/favicon-32x32.png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="./dist/css/main.min.css">
 
-  <title>Frontend Mentor | Social Media Dashboard With Theme Switcher</title>
+	<title>Frontend Mentor | Social Media Dashboard With Theme Switcher</title>
 </head>
 
 <body>
-  <!-- Social Media Dashboard
-  Total Followers: 23,004
-  Dark Mode
-  @nathanf
-  1987
-  Followers
-  12 Today
-  @nathanf
-  1044
-  Followers
-  99 Today
-  @realnathanf
-  11k
-  Followers
-  1099 Today
-  Nathan F.
-  8239
-  Subscribers
-  144 Today
-  Overview - Today
-  Page Views
-  87
-  3%
-  Likes
-  52
-  2%
-  Likes
-  5462
-  2257%
-  Profile Views
-  52k
-  1375%
-  Retweets
-  117
-  303%
-  Likes
-  507
-  553%
-  Likes
-  107
-  19%
-  Total Views
-  1407
-  12% -->
+
+	<header class="header" aria-labelledby="social-media-dashboard-heading">
+		<div class="container">
+			<div class="header__body">
+				<div class="header__content">
+					<h1 id="social-media-dashboard-heading">Social Media Dashboard</h1>
+					<p>Total Followers: 23,004</p>
+				</div>
+				<div class="theme-toogle">
+					<p>Dark Mode</p>
+					<button class="theme-toggle__btn" aria-label="Toggle theme."></button>
+				</div>
+			</div>
+		</div>
+	</header>
+
+	<main>
+		<div class="container">
+			<section class="grid summary" aria-label="Social media summary.">
+				<div class="card card--vertical card--facebook">
+					<p class="card__name"><img src="./dist/images/icon-facebook.svg" alt="">@nathanf</p>
+					<div>
+						<span class="card__stat card__stat--big">1987</span>
+						<p class="card__stat-label">Followers</p>
+					</div>
+					<p class="statistic statistic--up">12 Today</p>
+				</div>
+				<div class="card card--vertical card--twitter">
+					<p class="card__name"><img src="./dist/images/icon-twitter.svg" alt="">@nathanf</p>
+					<div>
+						<span class="card__stat card__stat--big">1044</span>
+						<p class="card__stat-label">Followers</p>
+					</div>
+					<p class="statistic statistic--up">99 Today</p>
+				</div>
+				<div class="card card--vertical card--instagram">
+					<p class="card__name"><img src="./dist/images/icon-instagram.svg" alt="">@realnathanf</p>
+					<div>
+						<span class="card__stat card__stat--big">11k</span>
+						<p class="card__stat-label">Followers</p>
+					</div>
+					<p class="statistic statistic--up">1099 Today</p>
+				</div>
+				<div class="card card--vertical card--youtube">
+					<p class="card__name"><img src="./dist/images/icon-youtube.svg" alt="">Nathan F.</p>
+					<div>
+						<span class="card__stat card__stat--big">8239</span>
+						<p class="card__stat-label">Subscribers</p>
+					</div>
+					<p class="statistic statistic--down">144 Today</p>
+				</div>
+			</section>
+			<section class="overview">
+				<h2 class="section-heading">Overview - Today</h2>
+				<div class="grid">
+					<div class="card card--corner">
+						<p>Page Views</p>
+						<img src="./dist/images/icon-facebook.svg" alt="">
+						<p class="card__stat">87</p>
+						<p class="statistic statistic--up">3%</p>
+					</div>
+					<div class="card card--corner">
+						<p>Likes</p>
+						<img src="./dist/images/icon-facebook.svg" alt="">
+						<p class="card__stat">52</p>
+						<p class="statistic statistic--down">2%</p>
+					</div>
+
+					<div class="card card--corner">
+						<p>Likes</p>
+						<img src="./dist/images/icon-instagram.svg" alt="">
+						<p class="card__stat">5462</p>
+						<p class="statistic statistic--up">2257%</p>
+					</div>
+					<div class="card card--corner">
+						<p>Profile Views</p>
+						<img src="./dist/images/icon-instagram.svg" alt="">
+						<p class="card__stat">52k</p>
+						<p class="statistic statistic--up">1375%</p>
+					</div>
+
+					<div class="card card--corner">
+						<p>Retweets</p>
+						<img src="./dist/images/icon-twitter.svg" alt="">
+						<p class="card__stat">117</p>
+						<p class="statistic statistic--up">303%</p>
+					</div>
+					<div class="card card--corner">
+						<p>Likes</p>
+						<img src="./dist/images/icon-twitter.svg" alt="">
+						<p class="card__stat">507</p>
+						<p class="statistic statistic--up">553%</p>
+					</div>
+
+					<div class="card card--corner">
+						<p>Likes</p>
+						<img src="./dist/images/icon-youtube.svg" alt="">
+						<p class="card__stat">107</p>
+						<p class="statistic statistic--down">19%</p>
+					</div>
+					<div class="card card--corner">
+						<p>Total Views</p>
+						<img src="./dist/images/icon-youtube.svg" alt="">
+						<p class="card__stat">1407</p>
+						<p class="statistic statistic--down">12%</p>
+					</div>
+				</div>
+			</section>
+		</div>
+	</main>
+
 </body>
 
 </html>
