Added some comments

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 					</div>
 					<p class="statistic statistic--up">12 Today</p>
 				</div>
+
 				<div class="card card--vertical card--twitter">
 					<p class="card__name"><img src="./dist/images/icon-twitter.svg" alt="">@nathanf</p>
 					<div>
@@ -51,6 +52,7 @@
 					</div>
 					<p class="statistic statistic--up">99 Today</p>
 				</div>
+
 				<div class="card card--vertical card--instagram">
 					<p class="card__name"><img src="./dist/images/icon-instagram.svg" alt="">@realnathanf</p>
 					<div>
@@ -59,6 +61,7 @@
 					</div>
 					<p class="statistic statistic--up">1099 Today</p>
 				</div>
+
 				<div class="card card--vertical card--youtube">
 					<p class="card__name"><img src="./dist/images/icon-youtube.svg" alt="">Nathan F.</p>
 					<div>
@@ -68,9 +71,11 @@
 					<p class="statistic statistic--down">144 Today</p>
 				</div>
 			</section>
+
 			<section class="overview">
 				<h2 class="section-heading">Overview - Today</h2>
 				<div class="grid">
+					<!-- Facebook part -->
 					<div class="card card--corner">
 						<p>Page Views</p>
 						<img src="./dist/images/icon-facebook.svg" alt="">
@@ -83,7 +88,7 @@
 						<p class="card__stat">52</p>
 						<p class="statistic statistic--down">2%</p>
 					</div>
-
+					<!-- Instagram part -->
 					<div class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-instagram.svg" alt="">
@@ -96,7 +101,7 @@
 						<p class="card__stat">52k</p>
 						<p class="statistic statistic--up">1375%</p>
 					</div>
-
+					<!-- Twitter part -->
 					<div class="card card--corner">
 						<p>Retweets</p>
 						<img src="./dist/images/icon-twitter.svg" alt="">
@@ -109,7 +114,7 @@
 						<p class="card__stat">507</p>
 						<p class="statistic statistic--up">553%</p>
 					</div>
-
+					<!-- YouTube part -->
 					<div class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-youtube.svg" alt="">
