--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		<div class="container">
 			<div class="header__body">
 				<div class="header__content">
-					<h1 id="social-media-dashboard-heading">Social Media Dashboard</h1>
+					<h1 id="social-media-dashboard-heading" class="header__heading">Social Media Dashboard</h1>
 					<p>Total Followers: 23,004</p>
 				</div>
-				<div class="theme-toogle">
+				<div class="theme-toggle">
 					<p>Dark Mode</p>
 					<button class="theme-toggle__btn" aria-label="Toggle theme."></button>
 				</div>
