--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<main>
 		<div class="container">
 			<section class="grid summary" aria-label="Social media summary.">
-				<div class="card card--vertical card--facebook">
+				<div class="card card--vertical before-border-top before-border-top--facebook">
 					<p class="card__name"><img src="./dist/images/icon-facebook.svg" alt="">@nathanf</p>
 					<div>
 						<span class="card__stat card__stat--big">1987</span>
@@ -44,7 +44,7 @@
 					<p class="statistic statistic--up">12 Today</p>
 				</div>
 
-				<div class="card card--vertical card--twitter">
+				<div class="card card--vertical before-border-top before-border-top--twitter">
 					<p class="card__name"><img src="./dist/images/icon-twitter.svg" alt="">@nathanf</p>
 					<div>
 						<span class="card__stat card__stat--big">1044</span>
@@ -53,7 +53,7 @@
 					<p class="statistic statistic--up">99 Today</p>
 				</div>
 
-				<div class="card card--vertical card--instagram">
+				<div class="card card--vertical before-border-top before-border-top--instagram">
 					<p class="card__name"><img src="./dist/images/icon-instagram.svg" alt="">@realnathanf</p>
 					<div>
 						<span class="card__stat card__stat--big">11k</span>
@@ -62,7 +62,7 @@
 					<p class="statistic statistic--up">1099 Today</p>
 				</div>
 
-				<div class="card card--vertical card--youtube">
+				<div class="card card--vertical before-border-top before-border-top--youtube">
 					<p class="card__name"><img src="./dist/images/icon-youtube.svg" alt="">Nathan F.</p>
 					<div>
 						<span class="card__stat card__stat--big">8239</span>
