--- a/index.html
+++ b/index.html
@@ -79,52 +79,52 @@
 					<div class="card card--corner">
 						<p>Page Views</p>
 						<img src="./dist/images/icon-facebook.svg" alt="">
-						<p class="card__stat">87</p>
+						<span class="card__stat">87</span>
 						<p class="statistic statistic--up">3%</p>
 					</div>
 					<div class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-facebook.svg" alt="">
-						<p class="card__stat">52</p>
+						<span class="card__stat">52</span>
 						<p class="statistic statistic--down">2%</p>
 					</div>
 					<!-- Instagram part -->
 					<div class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-instagram.svg" alt="">
-						<p class="card__stat">5462</p>
+						<span class="card__stat">5462</span>
 						<p class="statistic statistic--up">2257%</p>
 					</div>
 					<div class="card card--corner">
 						<p>Profile Views</p>
 						<img src="./dist/images/icon-instagram.svg" alt="">
-						<p class="card__stat">52k</p>
+						<span class="card__stat">52k</span>
 						<p class="statistic statistic--up">1375%</p>
 					</div>
 					<!-- Twitter part -->
 					<div class="card card--corner">
 						<p>Retweets</p>
 						<img src="./dist/images/icon-twitter.svg" alt="">
-						<p class="card__stat">117</p>
+						<span class="card__stat">117</span>
 						<p class="statistic statistic--up">303%</p>
 					</div>
 					<div class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-twitter.svg" alt="">
-						<p class="card__stat">507</p>
+						<span class="card__stat">507</span>
 						<p class="statistic statistic--up">553%</p>
 					</div>
 					<!-- YouTube part -->
 					<div class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-youtube.svg" alt="">
-						<p class="card__stat">107</p>
+						<span class="card__stat">107</span>
 						<p class="statistic statistic--down">19%</p>
 					</div>
 					<div class="card card--corner">
 						<p>Total Views</p>
 						<img src="./dist/images/icon-youtube.svg" alt="">
-						<p class="card__stat">1407</p>
+						<span class="card__stat">1407</span>
 						<p class="statistic statistic--down">12%</p>
 					</div>
 				</div>
