Making cards focusable

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<main>
 		<div class="container">
 			<section class="grid summary" aria-label="Social media summary.">
-				<div class="card card--vertical before-border-top before-border-top--facebook">
+				<div tabindex="0" class="card card--vertical before-border-top before-border-top--facebook">
 					<p class="card__name"><img src="./dist/images/icon-facebook.svg" alt="">@nathanf</p>
 					<div>
 						<span class="card__stat card__stat--big">1987</span>
@@ -44,7 +44,7 @@
 					<p class="statistic statistic--up">12 Today</p>
 				</div>
 
-				<div class="card card--vertical before-border-top before-border-top--twitter">
+				<div tabindex="0" class="card card--vertical before-border-top before-border-top--twitter">
 					<p class="card__name"><img src="./dist/images/icon-twitter.svg" alt="">@nathanf</p>
 					<div>
 						<span class="card__stat card__stat--big">1044</span>
@@ -53,7 +53,7 @@
 					<p class="statistic statistic--up">99 Today</p>
 				</div>
 
-				<div class="card card--vertical before-border-top before-border-top--instagram">
+				<div tabindex="0" class="card card--vertical before-border-top before-border-top--instagram">
 					<p class="card__name"><img src="./dist/images/icon-instagram.svg" alt="">@realnathanf</p>
 					<div>
 						<span class="card__stat card__stat--big">11k</span>
@@ -62,7 +62,7 @@
 					<p class="statistic statistic--up">1099 Today</p>
 				</div>
 
-				<div class="card card--vertical before-border-top before-border-top--youtube">
+				<div tabindex="0" class="card card--vertical before-border-top before-border-top--youtube">
 					<p class="card__name"><img src="./dist/images/icon-youtube.svg" alt="">Nathan F.</p>
 					<div>
 						<span class="card__stat card__stat--big">8239</span>
@@ -76,52 +76,52 @@
 				<h2 class="section-heading">Overview - Today</h2>
 				<div class="grid">
 					<!-- Facebook part -->
-					<div class="card card--corner">
+					<div tabindex="0" class="card card--corner">
 						<p>Page Views</p>
 						<img src="./dist/images/icon-facebook.svg" alt="">
 						<span class="card__stat">87</span>
 						<p class="statistic statistic--up">3%</p>
 					</div>
-					<div class="card card--corner">
+					<div tabindex="0" class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-facebook.svg" alt="">
 						<span class="card__stat">52</span>
 						<p class="statistic statistic--down">2%</p>
 					</div>
 					<!-- Instagram part -->
-					<div class="card card--corner">
+					<div tabindex="0" class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-instagram.svg" alt="">
 						<span class="card__stat">5462</span>
 						<p class="statistic statistic--up">2257%</p>
 					</div>
-					<div class="card card--corner">
+					<div tabindex="0" class="card card--corner">
 						<p>Profile Views</p>
 						<img src="./dist/images/icon-instagram.svg" alt="">
 						<span class="card__stat">52k</span>
 						<p class="statistic statistic--up">1375%</p>
 					</div>
 					<!-- Twitter part -->
-					<div class="card card--corner">
+					<div tabindex="0" class="card card--corner">
 						<p>Retweets</p>
 						<img src="./dist/images/icon-twitter.svg" alt="">
 						<span class="card__stat">117</span>
 						<p class="statistic statistic--up">303%</p>
 					</div>
-					<div class="card card--corner">
+					<div tabindex="0" class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-twitter.svg" alt="">
 						<span class="card__stat">507</span>
 						<p class="statistic statistic--up">553%</p>
 					</div>
 					<!-- YouTube part -->
-					<div class="card card--corner">
+					<div tabindex="0" class="card card--corner">
 						<p>Likes</p>
 						<img src="./dist/images/icon-youtube.svg" alt="">
 						<span class="card__stat">107</span>
 						<p class="statistic statistic--down">19%</p>
 					</div>
-					<div class="card card--corner">
+					<div tabindex="0" class="card card--corner">
 						<p>Total Views</p>
 						<img src="./dist/images/icon-youtube.svg" alt="">
 						<span class="card__stat">1407</span>
