--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<title>Frontend Mentor | Social Media Dashboard With Theme Switcher</title>
 </head>
 
-<body class="background-pattern">
+<body class="background-pattern" data-theme="light">
 
 	<header class="header" aria-labelledby="social-media-dashboard-heading">
 		<div class="container">
